objects/SCA_Result__c.object
<CustomObject>
    <description>Work: W-000026
Summary: This object stores SCA Results for a branch.</description>
    <label>SCA Result</label>
    <nameField>
        <displayFormat>SR-{0000000}</displayFormat>
        <label>SCA Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCA Results</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Highest_Priority__c</fullName>
        <description>Work: W-000026
Summary:This field stores the Highest Priority Violations.</description>
        <label>Highest Priority</label>
        <summarizedField>SCA_Violations__c.Priority__c</summarizedField>
        <summaryForeignKey>SCA_Violations__c.SCA_Result__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SCA_Review_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work: W-000026
Summary: Lookup to SCA Review History</description>
        <label>SCA Review History</label>
        <referenceTo>SCA_Review_History__c</referenceTo>
        <relationshipLabel>SCA Results</relationshipLabel>
        <relationshipName>SCA_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Issues__c</fullName>
        <description>Work: W-000026
Summary:This field stores the Total Violations</description>
        <label>Total Issues</label>
        <summaryForeignKey>SCA_Violations__c.SCA_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>